--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 </head>
 
+<div id="background">
 <body>
     <h2>GForss Design & Development</h1>
     <h3>608.555.5555</h2>
-    <h4>999 E Wilson St. <br> Madison, WI 53703</h3>
+    <h4>999 E Wilson St. <br> Madison, WI 53703</h4>
     <nav>
         <a class="active" href="#home">Home</a>
         <a href="#about">About Us</a>
@@ -26,8 +27,14 @@
         <h1>Call to Action.</h1>
         <p>We’re creative technology problem-solvers and have a passion for innovation. We partner with growing organizations to launch web and mobile applications in the insurance, real estate, education and healthcare industries.
         </p>
-        
+
+    </div>
+    <div class="splash-card">
+        <h1> MORE Call to Action.</h1>
+        <p>GForss enjoys working with innovative teams who are looking to build products that are revolutionizing their specific industry. Hardin will augment a company’s existing staff with anywhere between one to ten developers depending on the project scope and requirement. This organization may be a startup or a large Fortune 500.
+        </p>
     </div>
   <script src="js/scripts.js"></script>
 </body>
+</div>
 </html>
